cluster/apps/default/atuin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: atuin
  template:
    metadata:
      labels:
        app: atuin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: atuin
          image: ghcr.io/atuinsh/atuin:18.23.0
          args:
            - start
          ports:
            - containerPort: &port 8888
              name: http
          resources:
            limits:
              cpu: 250m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          startupProbe:
            httpGet:
              path: /healthz
              port: *port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: *port
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - mountPath: /config
              name: atuin-config
      volumes:
        - name: atuin-config
          persistentVolumeClaim:
            claimName: atuin-config
