cluster/apps/default/atuin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: atuin
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    app: atuin
