cluster/apps/default/atuin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atuin
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns/is-public: "true"
    external-dns.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: "external"
  rules:
    - host: "atuin.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atuin
                port:
                  number: 8888
  tls:
    - hosts:
        - "atuin.${SECRET_DOMAIN}"
      secretName: atuin-tls
